--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-myconnection": "^1.0.4",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22"
   }
