--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-myconnection": "^1.0.4",
     "express-session": "^1.17.3",
+    "fast-csv": "^4.3.6",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7"
   }
 }
