--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "node": "^20.7.0",
     "nodemon": "^2.0.22",
     "path": "^0.12.7"
   }
