--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "datepicker": "^0.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-myconnection": "^1.0.4",
